# dumbssg

./: CMakeLists.txt  README.md  config.yaml
assets/: styles.css
content/: hello-world.md
include/: generator.h  parser.h
src/: generator.cpp  main.cpp  parser.cpp
templates/: index.html  post.html
